--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,8 @@
   "author": "Sun",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "axios": "^0.21.4",
