--- a/front/package.json
+++ b/front/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@loadable/component": "^5.15.2",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "axios": "^0.21.4",
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
+    "loadable": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
@@ -32,6 +34,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "^14.14.31",
     "@types/react-router-dom": "^5.1.7",
     "@types/webpack": "^5.28.0",
@@ -46,6 +49,7 @@
     "react-refresh": "^0.10.0",
     "style-loader": "^3.2.1",
     "ts-node": "^10.0.0",
+    "typescript-loadable-components-plugin": "^1.0.3",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^4.7.4"
