--- a/front/package.json
+++ b/front/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/gravatar": "^1.8.3",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^14.14.31",
     "@types/react-router-dom": "^5.1.7",
